--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,9 @@ mypy = "^1.1.1"
 fire = "^0.5.0"
 ruff = "^0.0.256"
 
+[tool.poetry.group.docs]
+optional = true
+
 [tool.poetry.group.docs.dependencies]
 mkdocs-material = "^9.1.3"
 mkdocs-minify-plugin = "^0.6.4"
