--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -35,7 +35,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml') }}
 
       - name: Install dependencies
-        run: poetry install --with test, dev
+        run: poetry install --without docs
         if: steps.cached-poetry-deps.outputs.cache-hit != 'true'
 
       - name: Code Standards
