--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -35,7 +35,7 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('pyproject.toml') }}
 
       - name: Install dependencies
-        run: poetry install --without docs
+        run: poetry install --with test,dev
         if: steps.cached-poetry-deps.outputs.cache-hit != 'true'
 
       - name: Code Standards
@@ -46,19 +46,20 @@ jobs:
       - name: Execute tests
         run: poetry run pytest --disable-pytest-warnings
 
-      # - name: Merge to dev branch
-      #   run: |
-      #     git config --add remote.origin.fetch
-      #     git config user.email "${{ secrets.GIT_COMMITTER_EMAIL }}"
-      #     git config user.name "${{ secrets.GIT_COMMITTER_NAME }}"
-      #     git fetch --all
-      #     git checkout ${{ secrets.GIT_TARGET_BRANCH_FOR_MERGE }}
-      #     git merge --no-ff origin/${{ github.head_ref }}
-
       - name: Merge to dev branch
-        uses: devmasx/merge-branch@master
-        with:
-          type: now
-          # from_branch: ${{ github.head_ref }}
-          target_branch: ${{ secrets.GIT_TARGET_BRANCH_FOR_MERGE }}
-          github_token: ${{ github.token }}
+        run: |
+          git config --add remote.origin.fetch
+          git config user.email "${{ secrets.GIT_COMMITTER_EMAIL }}"
+          git config user.name "${{ secrets.GIT_COMMITTER_NAME }}"
+          git fetch --all
+          git checkout ${{ secrets.GIT_TARGET_BRANCH_FOR_MERGE }}
+          git merge --no-ff origin/${{ github.head_ref }}
+          git push "https://${ secrets.GH_TOKEN_TEST }@github.com/cyuss/decathlon-turnover.git"
+
+      # - name: Merge to dev branch
+      #   uses: devmasx/merge-branch@master
+      #   with:
+      #     type: now
+      #     # from_branch: ${{ github.head_ref }}
+      #     target_branch: ${{ secrets.GIT_TARGET_BRANCH_FOR_MERGE }}
+      #     github_token: ${{ github.token }}
