--- a/.github/workflows/testing.yaml
+++ b/.github/workflows/testing.yaml
@@ -48,7 +48,7 @@ jobs:
 
       - name: Merge to dev branch
         run: |
-          git config --add remote.origin.fetch
+          git remote add origin https://github.com/cyuss/decathlon-turnover.git
           git config user.email "${{ secrets.GIT_COMMITTER_EMAIL }}"
           git config user.name "${{ secrets.GIT_COMMITTER_NAME }}"
           git fetch --all
