--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,6 +52,13 @@ mkdocs-redirects = "^1.2.0"
 mkdocstrings = "^0.20.0"
 mkdocs-autorefs = "^0.4.1"
 
+[tool.poetry.group.notebook.dependencies]
+jupyter = "^1.0.0"
+pandas = "^1.5.3"
+black = {extras = ["jupyter"], version = "^23.1.0"}
+statsmodels = "^0.13.5"
+seaborn = {extras = ["stats"], version = "^0.12.2"}
+
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = ["tests/"]
@@ -106,8 +113,8 @@ src_paths = ["isort"]
 lines_after_imports = 2
 multi_line_output = 3
 skip = [".gitignore", ".dockerignore", ".venv", "^.*"]
-extend_skip = [".md", ".json"]
-skip_glob = ["docs/*"]
+extend_skip = [".md", ".json", ".csv"]
+skip_glob = ["docs/*", "data/*"]
 use_parentheses = true
 
 [tool.coverage.run]
